[package]
name = "rustyled"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bdf = "0.6.0"
minifb = "0.25.0"
# rpi-led-matrix = "0.4.0" -- TODO: Figure out how to prevent this from building on unsupported platforms, or make an adapter that prevents building

